# Multi-AI-Agents-on-Databricks

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: databricks-cicd.yml
container/: Dockerfile  README.md  docker-compose.yml
docs/: architecture.md  runbook.md
docs/adrs/: 0001-supervisor-specialist-orchestration.md  0002-mongodb-shared-memory.md  0003-rabbitmq-message-bus.md  0004-databricks-mcp-gateway-constraints.md  0005-pydantic-ai-tool-layer.md  README.md  template.md
scripts/: databricks_deploy.sh
src/ai_app/: __init__.py  main.py  memory.py  message_bus.py  orchestration.py  runtime_factory.py  settings.py  supervisor.py  supervisor_langgraph.py
src/ai_app/agents/: __init__.py  ai_engineer.py  backend.py  base.py  data_engineer.py  data_scientist.py  frontend.py  fullstack.py  ml_engineer.py  registry.py
src/ai_app/integrations/: __init__.py  mcp_data_sources.py
src/ai_app/resources/: application.json  log4j.properties
src/ai_app/utils/: __init__.py  memory.py  message_bus.py
